cta add animation, fix text align

--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,21 @@ a:visited {
   100% {
     transform: translateX(0px); } }
 
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0); }
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0); }
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0); }
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0); } }
+
 body {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
@@ -221,10 +236,12 @@ body {
     box-shadow: 0rem 0rem 2rem #414141;
     transition: all 0.4s;
     width: 24rem;
-    margin-top: 5rem; }
-    @media (max-width: 75em) {
-      .btn-cta {
-        text-align: left; } }
+    margin-top: 5rem;
+    animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+    animation-delay: 2s; }
     @media (max-width: 56.25em) {
       .btn-cta {
         margin: 5rem auto; } }
@@ -234,10 +251,6 @@ body {
     @media (max-width: 25em) {
       .btn-cta {
         font-size: 2em; } }
-  .btn-cta:hover {
-    transform: scale(1.05);
-    transition: all 0.4s;
-    box-shadow: none; }
 
 #cookies {
   display: block; }
